--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@heroicons/react": "1.0.6",
     "@storybook/react": "6.5.9",
     "axe-core": "4.4.2",
+    "axios": "0.27.2",
     "clsx": "1.1.1",
     "nanoid": "4.0.0",
     "next": "12",
